# rag-react-docs

./: .gitignore
.github/workflows/: publish.yml
backend/: README.md  main.py  mcp_server.py  pyproject.toml  query.py
backend/evals/: chunking_assessment_template.json  chunking_rubric.md
backend/scripts/: build_index_archive.py
backend/src/rag_react_docs/: __init__.py  config.py  datastore.py  retrieval.py  server.py  source_label.py
backend/src/utils/: chunk_document.py  config.py  document_loader.py  evaluate_file_chunks.py  fetch_react_docs.py  format_source_label.py  get_rag_collection.py  load_document_at_path.py  rag_graph.py  retrieve_chunks.py
py-rag/: main.py
rag_py/: README.md
rag_py/scripts/: fetch_react_docs.py
