[project]
name = "rag-backend"
version = "0.1.0"
description = "Backend for the LangChain RAG demo"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "langchain-core>=1.4.7",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.5",
    "mcp[cli]>=1.28.1",
    "python-dotenv>=1.0.0",
]

[tool.rag_db]
rag_doc_collection_name = "rag_doc_collection"

[tool.rag_query]
top_k = 5
generation_model = "claude-sonnet-4-6"

[tool.console.colors]
GREEN = "\u001B[92m"
RED = "\u001B[91m"
YELLOW = "\u001B[93m"
RESET = "\u001B[0m"
