[project]
name = "cfunklabs-rag-react-docs"
version = "0.1.4"
description = "Retrieval-only MCP server over the indexed React documentation, with a prebuilt index downloaded on first run."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Corey Funk" }]
keywords = ["mcp", "rag", "react", "documentation", "chromadb", "retrieval"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation",
]
# Runtime deps for the published wheel: retrieval + MCP server only. The generation/ingestion
# stack (langchain, langgraph, anthropic, ...) is dev-only and lives in [dependency-groups].
dependencies = [
    "certifi>=2024.0.0",
    "chromadb>=1.5.9",
    "mcp>=1.28.1",
    "platformdirs>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/cfunklabs/rag-react-docs"
Repository = "https://github.com/cfunklabs/rag-react-docs"

[project.scripts]
cfunklabs-rag-react-docs = "rag_react_docs.server:main"

[dependency-groups]
# Dev-only tooling: ingestion (main.py), query CLI (query.py), chunking evals, and the MCP
# Inspector. Installed by `uv sync` but excluded from the published wheel.
dev = [
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "langchain-core>=1.4.7",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.5",
    "mcp[cli]>=1.28.1",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Only the published package ships; dev tooling (main.py, query.py, src/utils/*) is excluded.
packages = ["src/rag_react_docs"]

[tool.hatch.build.targets.sdist]
include = ["src/rag_react_docs", "README.md"]

[tool.rag_db]
rag_doc_collection_name = "rag_doc_collection"

[tool.rag_query]
top_k = 5
generation_model = "claude-sonnet-4-6"

[tool.console.colors]
GREEN = "\u001B[92m"
RED = "\u001B[91m"
YELLOW = "\u001B[93m"
RESET = "\u001B[0m"
